hy340_2024/phase2/parser.output
Nonterminals useless in grammar

    indexedelemlisterror


Terminals unused in grammar

    STRING


Rules useless in grammar

  128 indexedelemlisterror: indexedelemlist LEFT_CURLY expr expr RIGHT_CURLY
  129                     | indexedelemlist LEFT_CURLY COLON expr RIGHT_CURLY
  130                     | indexedelemlist LEFT_CURLY expr COLON expr stmt


Rules useless in parser due to conflicts

   87 funcdefopenscope: LEFT_PARENTHESIS


State 4 conflicts: 1 shift/reduce
State 35 conflicts: 1 shift/reduce
State 37 conflicts: 1 shift/reduce
State 117 conflicts: 1 shift/reduce
State 121 conflicts: 14 shift/reduce
State 130 conflicts: 1 shift/reduce
State 185 conflicts: 14 shift/reduce
State 194 conflicts: 2 shift/reduce
State 216 conflicts: 16 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmts: stmt stmtreduce

    3 stmtreduce: stmt stmtreduce
    4           | ε

    5 stmt: expr SEMICOLON
    6     | ifstmt
    7     | whilestmt
    8     | forstmt
    9     | returnstmt
   10     | BREAK SEMICOLON
   11     | CONTINUE SEMICOLON
   12     | block
   13     | funcdef
   14     | ignore

   15 expr: assignexpr
   16     | expr op expr
   17     | term

   18 op: PLUS
   19   | MINUS
   20   | MULTIPLICATION
   21   | DIVISION
   22   | MODULO
   23   | GREATER
   24   | GREATER_EQUAL
   25   | LESS
   26   | LESS_EQUAL
   27   | EQUAL
   28   | NOT_EQUAL
   29   | AND
   30   | OR

   31 term: LEFT_PARENTHESIS expr RIGHT_PARENTHESIS
   32     | MINUS expr
   33     | NOT expr
   34     | PLUS_PLUS lvalue
   35     | MINUS_MINUS lvalue
   36     | lvalue PLUS_PLUS
   37     | lvalue MINUS_MINUS
   38     | primary

   39 assignexpr: lvalue ASSIGN expr

   40 primary: lvalue
   41        | call
   42        | objectdef
   43        | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS
   44        | const

   45 lvalue: ID
   46       | LOCAL ID
   47       | DOUBLE_COLON ID
   48       | member

   49 member: lvalue DOT ID
   50       | lvalue LEFT_SQUARE expr RIGHT_SQUARE
   51       | call DOT ID
   52       | call LEFT_SQUARE expr RIGHT_SQUARE

   53 call: call LEFT_PARENTHESIS elist RIGHT_PARENTHESIS
   54     | lvalue callsufix
   55     | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   56 callsufix: normcall
   57          | methodcall

   58 normcall: LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   59 methodcall: DOUBLE_DOT ID LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   60 elist: LEFT_SQUARE expressionlist RIGHT_SQUARE

   61 expressionlist: expr
   62               | expr COMMA expressionlist
   63               | expressionlisterror

   64 expressionlisterror: expressionlist COMMA RIGHT_PARENTHESIS
   65                    | expressionlist COMMA RIGHT_SQUARE
   66                    | expressionlist COMMA LEFT_SQUARE
   67                    | expressionlist op
   68                    | expressionlist COMMA RIGHT_CURLY
   69                    | expressionlist COMMA LEFT_CURLY

   70 objectdef: LEFT_SQUARE objectdeflist RIGHT_SQUARE

   71 objectdeflist: elist
   72              | indexed

   73 indexed: LEFT_SQUARE indexedelemlist RIGHT_SQUARE

   74 indexedelemlist: indexedelem
   75                | indexedelem COMMA indexedelemlist

   76 indexedelem: LEFT_CURLY expr COLON expr RIGHT_CURLY

   77 block: blockopenscope stmt blockclosescope
   78      | blockerror

   79 blockopenscope: LEFT_CURLY

   80 blockclosescope: RIGHT_CURLY

   81 blockerror: blockopenscope stmt
   82           | blockclosescope

   83 funcdef: FUNCTION functioname funcdefopenscope idlist RIGHT_PARENTHESIS block
   84        | functionerror

   85 functioname: ID
   86            | ε

   87 funcdefopenscope: LEFT_PARENTHESIS

   88 functionerror: FUNCTION functioname idlist RIGHT_PARENTHESIS block
   89              | FUNCTION functioname LEFT_PARENTHESIS idlist block
   90              | FUNCTION functioname LEFT_PARENTHESIS idlist RIGHT_PARENTHESIS
   91              | FUNCTION functioname LEFT_PARENTHESIS op RIGHT_PARENTHESIS
   92              | FUNCTION functioname LEFT_PARENTHESIS op RIGHT_PARENTHESIS block

   93 const: CONST_REAL
   94      | CONST_INT
   95      | CONST_STRING
   96      | NIL
   97      | TRUE
   98      | FALSE

   99 idlist: ID
  100       | ID COMMA idlist
  101       | idlisterror

  102 idlisterror: ID COMMA LEFT_PARENTHESIS

  103 ifstmt: IF LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt
  104       | IF LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt ELSE stmt
  105       | IF specialparenthesiserror

  106 whilestmt: WHILE LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt
  107          | WHILE specialparenthesiserror

  108 forstmt: FOR LEFT_PARENTHESIS elist SEMICOLON expr SEMICOLON elist RIGHT_PARENTHESIS stmt
  109        | FOR parenthesiserror
  110        | forstmterror

  111 forstmterror: FOR LEFT_PARENTHESIS elist expr SEMICOLON elist RIGHT_PARENTHESIS stmt
  112             | FOR LEFT_PARENTHESIS elist expr SEMICOLON elist RIGHT_PARENTHESIS
  113             | FOR elist SEMICOLON expr elist RIGHT_PARENTHESIS stmt
  114             | FOR RIGHT_PARENTHESIS elist LEFT_PARENTHESIS
  115             | FOR RIGHT_PARENTHESIS LEFT_PARENTHESIS

  116 parenthesiserror: RIGHT_PARENTHESIS
  117                 | LEFT_PARENTHESIS expr RIGHT_CURLY
  118                 | LEFT_PARENTHESIS expr LEFT_CURLY

  119 specialparenthesiserror: LEFT_PARENTHESIS stmt
  120                        | parenthesiserror

  121 returnstmt: RETURN returnstmts

  122 returnstmts: expr SEMICOLON
  123            | SEMICOLON
  124            | op SEMICOLON

  125 ignore: BLOCK_COMMENT
  126       | COMMENT_LINE
  127       | COMMENT_NESTED


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IF (258) 103 104 105
    ELSE (259) 104
    WHILE (260) 106 107
    FOR (261) 108 109 111 112 113 114 115
    FUNCTION (262) 83 88 89 90 91 92
    RETURN (263) 121
    BREAK (264) 10
    CONTINUE (265) 11
    AND (266) 29
    NOT (267) 33
    OR (268) 30
    LOCAL (269) 46
    TRUE (270) 97
    FALSE (271) 98
    NIL (272) 96
    ASSIGN (273) 39
    PLUS (274) 18
    MINUS (275) 19 32
    MULTIPLICATION (276) 20
    DIVISION (277) 21
    MODULO (278) 22
    EQUAL (279) 27
    NOT_EQUAL (280) 28
    PLUS_PLUS (281) 34 36
    MINUS_MINUS (282) 35 37
    GREATER (283) 23
    LESS (284) 25
    GREATER_EQUAL (285) 24
    LESS_EQUAL (286) 26
    LEFT_CURLY (287) 69 76 79 118
    RIGHT_CURLY (288) 68 76 80 117
    LEFT_SQUARE (289) 50 52 60 66 70 73
    RIGHT_SQUARE (290) 50 52 60 65 70 73
    LEFT_PARENTHESIS (291) 31 43 53 55 58 59 87 89 90 91 92 102 103 104 106 108 111 112 114 115 117 118 119
    RIGHT_PARENTHESIS (292) 31 43 53 55 58 59 64 83 88 90 91 92 103 104 106 108 111 112 113 114 115 116
    SEMICOLON (293) 5 10 11 108 111 112 113 122 123 124
    COMMA (294) 62 64 65 66 68 69 75 100 102
    COLON (295) 76
    DOUBLE_COLON (296) 47
    DOT (297) 49 51
    DOUBLE_DOT (298) 59
    ID <str_val> (299) 45 46 47 49 51 59 85 99 100 102
    CONST_INT <int_val> (300) 94
    CONST_REAL <double_val> (301) 93
    CONST_STRING <str_val> (302) 95
    COMMENT_NESTED (303) 127
    BLOCK_COMMENT (304) 125
    COMMENT_LINE (305) 126
    STRING (306)
    UMINUS (307)
    EXPRESSION_READ_NEXT_CHARACTER (308)


Nonterminals, with rules where they appear

    $accept (54)
        on left: 0
    program (55)
        on left: 1
        on right: 0
    stmts (56)
        on left: 2
        on right: 1
    stmtreduce (57)
        on left: 3 4
        on right: 2 3
    stmt (58)
        on left: 5 6 7 8 9 10 11 12 13 14
        on right: 2 3 77 81 103 104 106 108 111 113 119
    expr (59)
        on left: 15 16 17
        on right: 5 16 31 32 33 39 50 52 61 62 76 103 104 106 108 111 112 113 117 118 122
    op (60)
        on left: 18 19 20 21 22 23 24 25 26 27 28 29 30
        on right: 16 67 91 92 124
    term (61)
        on left: 31 32 33 34 35 36 37 38
        on right: 17
    assignexpr (62)
        on left: 39
        on right: 15
    primary (63)
        on left: 40 41 42 43 44
        on right: 38
    lvalue <node> (64)
        on left: 45 46 47 48
        on right: 34 35 36 37 39 40 49 50 54
    member (65)
        on left: 49 50 51 52
        on right: 48
    call (66)
        on left: 53 54 55
        on right: 41 51 52 53
    callsufix (67)
        on left: 56 57
        on right: 54
    normcall (68)
        on left: 58
        on right: 56
    methodcall (69)
        on left: 59
        on right: 57
    elist (70)
        on left: 60
        on right: 53 55 58 59 71 108 111 112 113 114
    expressionlist (71)
        on left: 61 62 63
        on right: 60 62 64 65 66 67 68 69
    expressionlisterror (72)
        on left: 64 65 66 67 68 69
        on right: 63
    objectdef (73)
        on left: 70
        on right: 42
    objectdeflist (74)
        on left: 71 72
        on right: 70
    indexed (75)
        on left: 73
        on right: 72
    indexedelemlist (76)
        on left: 74 75
        on right: 73 75
    indexedelem (77)
        on left: 76
        on right: 74 75
    block (78)
        on left: 77 78
        on right: 12 83 88 89 92
    blockopenscope (79)
        on left: 79
        on right: 77 81
    blockclosescope (80)
        on left: 80
        on right: 77 82
    blockerror (81)
        on left: 81 82
        on right: 78
    funcdef (82)
        on left: 83 84
        on right: 13 43 55
    functioname (83)
        on left: 85 86
        on right: 83 88 89 90 91 92
    funcdefopenscope (84)
        on left: 87
        on right: 83
    functionerror (85)
        on left: 88 89 90 91 92
        on right: 84
    const (86)
        on left: 93 94 95 96 97 98
        on right: 44
    idlist (87)
        on left: 99 100 101
        on right: 83 88 89 90 100
    idlisterror (88)
        on left: 102
        on right: 101
    ifstmt (89)
        on left: 103 104 105
        on right: 6
    whilestmt (90)
        on left: 106 107
        on right: 7
    forstmt (91)
        on left: 108 109 110
        on right: 8
    forstmterror (92)
        on left: 111 112 113 114 115
        on right: 110
    parenthesiserror (93)
        on left: 116 117 118
        on right: 109 120
    specialparenthesiserror (94)
        on left: 119 120
        on right: 105 107
    returnstmt (95)
        on left: 121
        on right: 9
    returnstmts (96)
        on left: 122 123 124
        on right: 121
    ignore (97)
        on left: 125 126 127
        on right: 14


State 0

    0 $accept: • program $end

    IF                shift, and go to state 1
    WHILE             shift, and go to state 2
    FOR               shift, and go to state 3
    FUNCTION          shift, and go to state 4
    RETURN            shift, and go to state 5
    BREAK             shift, and go to state 6
    CONTINUE          shift, and go to state 7
    NOT               shift, and go to state 8
    LOCAL             shift, and go to state 9
    TRUE              shift, and go to state 10
    FALSE             shift, and go to state 11
    NIL               shift, and go to state 12
    MINUS             shift, and go to state 13
    PLUS_PLUS         shift, and go to state 14
    MINUS_MINUS       shift, and go to state 15
    LEFT_CURLY        shift, and go to state 16
    RIGHT_CURLY       shift, and go to state 17
    LEFT_SQUARE       shift, and go to state 18
    LEFT_PARENTHESIS  shift, and go to state 19
    DOUBLE_COLON      shift, and go to state 20
    ID                shift, and go to state 21
    CONST_INT         shift, and go to state 22
    CONST_REAL        shift, and go to state 23
    CONST_STRING      shift, and go to state 24
    COMMENT_NESTED    shift, and go to state 25
    BLOCK_COMMENT     shift, and go to state 26
    COMMENT_LINE      shift, and go to state 27

    program          go to state 28
    stmts            go to state 29
    stmt             go to state 30
    expr             go to state 31
    term             go to state 32
    assignexpr       go to state 33
    primary          go to state 34
    lvalue           go to state 35
    member           go to state 36
    call             go to state 37
    objectdef        go to state 38
    block            go to state 39
    blockopenscope   go to state 40
    blockclosescope  go to state 41
    blockerror       go to state 42
    funcdef          go to state 43
    functionerror    go to state 44
    const            go to state 45
    ifstmt           go to state 46
    whilestmt        go to state 47
    forstmt          go to state 48
    forstmterror     go to state 49
    returnstmt       go to state 50
    ignore           go to state 51


State 1

  103 ifstmt: IF • LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt
  104       | IF • LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt ELSE stmt
  105       | IF • specialparenthesiserror

    LEFT_PARENTHESIS   shift, and go to state 52
    RIGHT_PARENTHESIS  shift, and go to state 53

    parenthesiserror         go to state 54
    specialparenthesiserror  go to state 55


State 2

  106 whilestmt: WHILE • LEFT_PARENTHESIS expr RIGHT_PARENTHESIS stmt
  107          | WHILE • specialparenthesiserror

    LEFT_PARENTHESIS   shift, and go to state 56
    RIGHT_PARENTHESIS  shift, and go to state 53

    parenthesiserror         go to state 54
    specialparenthesiserror  go to state 57


State 3

  108 forstmt: FOR • LEFT_PARENTHESIS elist SEMICOLON expr SEMICOLON elist RIGHT_PARENTHESIS stmt
  109        | FOR • parenthesiserror
  111 forstmterror: FOR • LEFT_PARENTHESIS elist expr SEMICOLON elist RIGHT_PARENTHESIS stmt
  112             | FOR • LEFT_PARENTHESIS elist expr SEMICOLON elist RIGHT_PARENTHESIS
  113             | FOR • elist SEMICOLON expr elist RIGHT_PARENTHESIS stmt
  114             | FOR • RIGHT_PARENTHESIS elist LEFT_PARENTHESIS
  115             | FOR • RIGHT_PARENTHESIS LEFT_PARENTHESIS

    LEFT_SQUARE        shift, and go to state 58
    LEFT_PARENTHESIS   shift, and go to state 59
    RIGHT_PARENTHESIS  shift, and go to state 60

    elist             go to state 61
    parenthesiserror  go to state 62


State 4

   83 funcdef: FUNCTION • functioname funcdefopenscope idlist RIGHT_PARENTHESIS block
   88 functionerror: FUNCTION • functioname idlist RIGHT_PARENTHESIS block
   89              | FUNCTION • functioname LEFT_PARENTHESIS idlist block
   90              | FUNCTION • functioname LEFT_PARENTHESIS idlist RIGHT_PARENTHESIS
   91              | FUNCTION • functioname LEFT_PARENTHESIS op RIGHT_PARENTHESIS
   92              | FUNCTION • functioname LEFT_PARENTHESIS op RIGHT_PARENTHESIS block

    ID  shift, and go to state 63

    ID        [reduce using rule 86 (functioname)]
    $default  reduce using rule 86 (functioname)

    functioname  go to state 64


State 5

  121 returnstmt: RETURN • returnstmts

    AND               shift, and go to state 65
    NOT               shift, and go to state 8
    OR                shift, and go to state 66
    LOCAL             shift, and go to state 9
    TRUE              shift, and go to state 10
    FALSE             shift, and go to state 11
    NIL               shift, and go to state 12
    PLUS              shift, and go to state 67
    MINUS             shift, and go to state 68
    MULTIPLICATION    shift, and go to state 69
    DIVISION          shift, and go to state 70
    MODULO            shift, and go to state 71
    EQUAL             shift, and go to state 72
    NOT_EQUAL         shift, and go to state 73
    PLUS_PLUS         shift, and go to state 14
    MINUS_MINUS       shift, and go to state 15
    GREATER           shift, and go to state 74
    LESS              shift, and go to state 75
    GREATER_EQUAL     shift, and go to state 76
    LESS_EQUAL        shift, and go to state 77
    LEFT_SQUARE       shift, and go to state 18
    LEFT_PARENTHESIS  shift, and go to state 19
    SEMICOLON         shift, and go to state 78
    DOUBLE_COLON      shift, and go to state 20
    ID                shift, and go to state 21
    CONST_INT         shift, and go to state 22
    CONST_REAL        shift, and go to state 23
    CONST_STRING      shift, and go to state 24

    expr         go to state 79
    op           go to state 80
    term         go to state 32
    assignexpr   go to state 33
    primary      go to state 34
    lvalue       go to state 35
    member       go to state 36
    call         go to state 37
    objectdef    go to state 38
    const        go to state 45
    returnstmts  go to state 81


State 6

   10 stmt: BREAK • SEMICOLON

    SEMICOLON  shift, and go to state 82


State 7

   11 stmt: CONTINUE • SEMICOLON

    SEMICOLON  shift, and go to state 83


State 8

   33 term: NOT • expr

    NOT               shift, and go to state 8
    LOCAL             shift, and go to state 9
    TRUE              shift, and go to state 10
    FALSE             shift, and go to state 11
    NIL               shift, and go to state 12
    MINUS             shift, and go to state 13
    PLUS_PLUS         shift, and go to state 14
    MINUS_MINUS       shift, and go to state 15
    LEFT_SQUARE       shift, and go to state 18
    LEFT_PARENTHESIS  shift, and go to state 19
    DOUBLE_COLON      shift, and go to state 20
    ID                shift, and go to state 21
    CONST_INT         shift, and go to state 22
    CONST_REAL        shift, and go to state 23
    CONST_STRING      shift, and go to state 24

    expr        go to state 84
    term        go to state 32
    assignexpr  go to state 33
    primary     go to state 34
    lvalue      go to state 35
    member      go to state 36
    call        go to state 37
    objectdef   go to state 38
    const       go to state 45


State 9

   46 lvalue: LOCAL • ID

    ID  shift, and go to state 85


State 10

   97 const: TRUE •

    $default  reduce using rule 97 (const)


State 11

   98 const: FALSE •

    $default  reduce using rule 98 (const)


State 12

   96 const: NIL •

    $default  reduce using rule 96 (const)


State 13

   32 term: MINUS • expr

    NOT               shift, and go to state 8
    LOCAL             shift, and go to state 9
    TRUE              shift, and go to state 10
    FALSE             shift, and go to state 11
    NIL               shift, and go to state 12
    MINUS             shift, and go to state 13
    PLUS_PLUS         shift, and go to state 14
    MINUS_MINUS       shift, and go to state 15
    LEFT_SQUARE       shift, and go to state 18
    LEFT_PARENTHESIS  shift, and go to state 19
    DOUBLE_COLON      shift, and go to state 20
    ID                shift, and go to state 21
    CONST_INT         shift, and go to state 22
    CONST_REAL        shift, and go to state 23
    CONST_STRING      shift, and go to state 24

    expr        go to state 86
    term        go to state 32
    assignexpr  go to state 33
    primary     go to state 34
    lvalue      go to state 35
    member      go to state 36
    call        go to state 37
    objectdef   go to state 38
    const       go to state 45


State 14

   34 term: PLUS_PLUS • lvalue

    LOCAL             shift, and go to state 9
    LEFT_PARENTHESIS  shift, and go to state 87
    DOUBLE_COLON      shift, and go to state 20
    ID                shift, and go to state 21

    lvalue  go to state 88
    member  go to state 36
    call    go to state 89


State 15

   35 term: MINUS_MINUS • lvalue

    LOCAL             shift, and go to state 9
    LEFT_PARENTHESIS  shift, and go to state 87
    DOUBLE_COLON      shift, and go to state 20
    ID                shift, and go to state 21

    lvalue  go to state 90
    member  go to state 36
    call    go to state 89


State 16

   79 blockopenscope: LEFT_CURLY •

    $default  reduce using rule 79 (blockopenscope)


State 17

   80 blockclosescope: RIGHT_CURLY •

    $default  reduce using rule 80 (blockclosescope)


State 18

   70 objectdef: LEFT_SQUARE • objectdeflist RIGHT_SQUARE

    LEFT_SQUARE  shift, and go to state 91

    elist          go to state 92
    objectdeflist  go to state 93
    indexed        go to state 94


State 19

   31 term: LEFT_PARENTHESIS • expr RIGHT_PARENTHESIS
   43 primary: LEFT_PARENTHESIS • funcdef RIGHT_PARENTHESIS
   55 call: LEFT_PARENTHESIS • funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS
